Add support for table level cluster blocks
A table level block adds the block setting to RelationMetadata
and all existing IndexMetadata while a partition level block
adds the block setting to the indexMetadata only.